# simpler-PTO

./: .gitignore  README.md  run_hostbuild.sh  run_tensormap.sh
examples/host_build_graph/allgather_Manual/: README.md  golden.py
examples/host_build_graph/allgather_Tgather/: README.md  golden.py
examples/host_build_graph/comm_gather/: PLAN_multicard_gather.md  README.md  golden.py
examples/host_build_graph/cpt_and_comm/: README.md  golden.py
examples/host_build_graph/gather/: README.md  golden.py
examples/host_build_graph/gather/kernels/: kernel_config.py
examples/host_build_graph/gemm_gather/: README.md  golden.py
examples/host_build_graph/multi_bgemm/: README.md
examples/host_build_graph/paged_attention_allgather_Manual/: README.md  golden.py
examples/host_build_graph/paged_attention_allgather_Tgather/: README.md  golden.py
examples/host_build_graph/paged_attention_gather/: README.md  golden.py
examples/scripts/: code_runner.py  hccl_bindings.py  multi_card_code_runner.py  multi_card_run_example.py  run_example.py
examples/scripts/comm_include/: hccl_context.h  hccl_helpers.h
examples/scripts/hccl_helper/: CMakeLists.txt  README.md  hccl_helper.cpp
examples/tensormap_and_ringbuffer/allgather_Manual/: README.md  golden.py
examples/tensormap_and_ringbuffer/allgather_Tgather/: README.md  golden.py
examples/tensormap_and_ringbuffer/batch_paged_attention/: README.md
examples/tensormap_and_ringbuffer/gather/: README.md  golden.py
examples/tensormap_and_ringbuffer/paged_attention_allgather_Manual/: README.md  golden.py
python/: bindings.py
(+63 files in other folders)
